# CHUCK

./: .gitignore  .gitmodules  README.md
.github/: pull_request_template.md
ARSIS-6-Unity/: ARSIS-6-Unity.sln  ARSIS-6.sln  Unity.CollabProxy.Editor.csproj  Unity.InputSystem.csproj  Unity.InternalAPIEditorBridge.005.csproj  Unity.Rider.Editor.csproj  Unity.Subsystem.Registration.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  Unity.Timeline.Editor.csproj  Unity.Timeline.csproj  Unity.VSCode.Editor.csproj  Unity.VisualStudio.Editor.csproj  Unity.XR.ARFoundation.Editor.csproj  Unity.XR.ARFoundation.csproj  Unity.XR.ARSubsystems.Editor.csproj  Unity.XR.ARSubsystems.csproj  Unity.XR.CoreUtils.Editor.csproj  Unity.XR.CoreUtils.csproj  Unity.XR.Interaction.Toolkit.Editor.csproj  Unity.XR.Interaction.Toolkit.csproj  Unity.XR.Management.Editor.csproj  Unity.XR.Management.csproj  Unity.XR.OpenXR.Editor.csproj  Unity.XR.OpenXR.Features.ConformanceAutomation.csproj  Unity.XR.OpenXR.Features.MockRuntime.csproj  Unity.XR.OpenXR.Features.OculusQuestSupport.Editor.csproj  Unity.XR.OpenXR.Features.OculusQuestSupport.csproj  Unity.XR.OpenXR.Features.RuntimeDebugger.Editor.csproj  Unity.XR.OpenXR.Features.RuntimeDebugger.csproj  Unity.XR.OpenXR.csproj  UnityEditor.SpatialTracking.csproj  UnityEditor.TestRunner.csproj  UnityEditor.XR.LegacyInputHelpers.csproj  UnityEngine.SpatialTracking.csproj  UnityEngine.TestRunner.csproj  UnityEngine.XR.LegacyInputHelpers.csproj
ARSIS-Devices/VisionKit/control_endpoint/: MicrocontrollerInterface.py  pyproject.toml  run.sh  setup.sh
ARSIS-Devices/VisionKit/control_endpoint/app/: main.py
ARSIS-MiniClients/: chat.py
ARSIS-Rover/: docker-compose.yml  rover.env
ARSIS-Telemetry-GroundControl/: docker-compose.test.yml  docker-compose.yml
ARSIS-Telemetry-GroundControl/groundcontrol-api/: .gitignore  Dockerfile  pyproject.toml
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/: crud.py  datastore.py  event.py  main.py  tss.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/db/: database.py  models.py  schemas.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/routers/: chat.py  devices.py  logs.py  navigation.py  procedures.py  webrtc.py  ws.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/routers/on_server_navigation/: create_path.py  default_paths.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/routers/on_server_procedures/: create_procedure.py  mock_procedure.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/routers/procedures/: Ingres.yml  cable_repair.yml  geo_sample.yml  inspect_comm.yml  sample_proc.yml  test.yml
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/tests/: test_tss.py
ARSIS-Telemetry-GroundControl/groundcontrol-api/app/tests/json/: sample_rover.json
ARSIS-Unity/: .gitignore  ARSIS-Unity.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  AssistantCoreSDKEditor.csproj  AssistantCoreSDKRuntime.csproj  EventSystem.csproj  Facebook.Wit.Dictation.Editor.csproj  Facebook.Wit.Dictation.csproj  MRTK.OpenXR.Editor.csproj  Meta.VoiceSDK.Mic.Common.csproj  (+143 more)
Telemetry-GroundControl/groundcontrol-api/: pyproject.toml
Telemetry-GroundControl/groundcontrol-api/app/: event.py  tss.py
Telemetry-GroundControl/groundcontrol-api/app/routers/: logs.py  warnings.py
Telemetry-GroundControl/groundcontrol-api/app/routers/on_server_navigation/: rover_path.py
Telemetry-GroundControl/groundcontrol-api/app/routers/procedures/: cable_repair.yml  egress.yml  inspect_comm.yml  rover.yml
Telemetry-GroundControl/groundcontrol-api/app/tests/: test_tss.py
Telemetry-GroundControl/groundcontrol-api/app/tests/json/: sample_dcu.json  sample_eva.json  sample_imu.json  sample_telemetry.json  sample_uia.json
test_scripts/: location_update.py  pyproject.toml  ws_client.py
(+614 files in other folders)
