[tool.poetry]
name = "test-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "test_scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
argparse = "^1.4.0"
websocket-client = "^1.7.0"
rel = "^0.4.9.5"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
