[tool.poetry]
name = "telemetry-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "telemetry_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.5"
sqlalchemy = "^2.0.4"
pydantic = "^1.8.2"
pytest = "^7.4.4"
requests = "^2.31.0"
responses = "^0.24.1"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
