[tool.poetry]
name = "telemetry-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "telemetry_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
python-multipart = "^0.0.7"
sqlalchemy = "^2.0.4"
pydantic = "^1.8.2"
pytest = "^7.4.4"
requests = "^2.32.2"
responses = "^0.24.1"
psycopg2-binary = "^2.9.9"
pytest-asyncio = "^0.23.4"
rasterio = "^1.3.9"
geojson = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
